# pdm-project-template

./: README.md  pyproject.toml
.github/workflows/: release.yml  ruff-check.yml
