[project]
name = "pdm-project-template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Cvandia", email = "106718176+Cvandia@users.noreply.github.com"},
]
dependencies = []
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = ["pre-commit>=4.0.1"]
